--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,70 @@
 
+@BOOK{Fowler2010-zd,
+  title     = "{Domain-Specific} Languages",
+  author    = "Fowler, Martin",
+  abstract  = "When carefully selected and used, Domain-Specific Languages
+               (DSLs) may simplify complex code, promote effective
+               communication with customers, improve productivity, and unclog
+               development bottlenecks. In Domain-Specific Languages , noted
+               software development expert Martin Fowler first provides the
+               information software professionals need to decide if and when to
+               utilize DSLs. Then, where DSLs prove suitable, Fowler presents
+               effective techniques for building them, and guides software
+               engineers in choosing the right approaches for their
+               applications. This book's techniques may be utilized with most
+               modern object-oriented languages; the author provides numerous
+               examples in Java and C\#, as well as selected examples in Ruby.
+               Wherever possible, chapters are organized to be self-standing,
+               and most reference topics are presented in a familiar patterns
+               format. Armed with this wide-ranging book, developers will have
+               the knowledge they need to make important decisions about
+               DSLs---and, where appropriate, gain the significant technical
+               and business benefits they offer. The topics covered include:
+               How DSLs compare to frameworks and libraries, and when those
+               alternatives are sufficient Using parsers and parser generators,
+               and parsing external DSLs Understanding, comparing, and choosing
+               DSL language constructs Determining whether to use code
+               generation, and comparing code generation strategies Previewing
+               new language workbench tools for creating DSLs",
+  publisher = "Pearson Education",
+  month     =  sep,
+  year      =  2010,
+  url       = "https://market.android.com/details?id=book-ri1muolw_YwC",
+  language  = "en",
+  isbn      = "9780131392809"
+}
+
+@Manual{R-S4vectors,
+    title = {S4Vectors: S4 implementation of vector-like and list-like objects},
+    author = {H. Pagès and M. Lawrence and P. Aboyoun},
+    year = {2017},
+    note = {R package version 0.16.0},
+}
+
+
+@Manual{R-rlang,
+  title = {rlang: Functions for Base Types and Core R and 'Tidyverse' Features},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2017},
+  url = {http://rlang.tidyverse.org},
+  note = {http://rlang.tidyverse.org, https://github.com/r-lib/rlang},
+}
+
+@Manual{R-magrittr,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2014},
+  note = {R package version 1.5},
+  url = {https://CRAN.R-project.org/package=magrittr},
+}
+@Manual{R-tidyr,
+  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2018},
+  note = {R package version 0.8.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
 @ARTICLE{Huber2015-ei,
   title       = "Orchestrating high-throughput genomic analysis with
                  Bioconductor",
@@ -205,6 +271,13 @@
   issn     = "1545-5963, 1557-9964",
   pmid     = "27295683",
   doi      = "10.1109/TCBB.2016.2576447"
+}
+
+@Manual{R-ahub,
+    title = {AnnotationHub: Client to access AnnotationHub resources},
+    author = {Martin Morgan},
+    year = {2017},
+    note = {R package version 2.10.1},
 }
 
 @INPROCEEDINGS{Dorok2015-ts,
@@ -641,6 +714,215 @@
   pmid        = "23751181",
   doi         = "10.1093/bioinformatics/btt250",
   pmc         = "PMC3866549"
+}
+
+
+
+@ARTICLE{Roadmap_Epigenomics_Consortium2015-pr,
+  title       = "Integrative analysis of 111 reference human epigenomes",
+  author      = "{Roadmap Epigenomics Consortium} and Kundaje, Anshul and
+                 Meuleman, Wouter and Ernst, Jason and Bilenky, Misha and Yen,
+                 Angela and Heravi-Moussavi, Alireza and Kheradpour, Pouya and
+                 Zhang, Zhizhuo and Wang, Jianrong and Ziller, Michael J and
+                 Amin, Viren and Whitaker, John W and Schultz, Matthew D and
+                 Ward, Lucas D and Sarkar, Abhishek and Quon, Gerald and
+                 Sandstrom, Richard S and Eaton, Matthew L and Wu, Yi-Chieh and
+                 Pfenning, Andreas R and Wang, Xinchen and Claussnitzer, Melina
+                 and Liu, Yaping and Coarfa, Cristian and Harris, R Alan and
+                 Shoresh, Noam and Epstein, Charles B and Gjoneska, Elizabeta
+                 and Leung, Danny and Xie, Wei and Hawkins, R David and Lister,
+                 Ryan and Hong, Chibo and Gascard, Philippe and Mungall, Andrew
+                 J and Moore, Richard and Chuah, Eric and Tam, Angela and
+                 Canfield, Theresa K and Hansen, R Scott and Kaul, Rajinder and
+                 Sabo, Peter J and Bansal, Mukul S and Carles, Annaick and
+                 Dixon, Jesse R and Farh, Kai-How and Feizi, Soheil and Karlic,
+                 Rosa and Kim, Ah-Ram and Kulkarni, Ashwinikumar and Li,
+                 Daofeng and Lowdon, Rebecca and Elliott, Ginell and Mercer,
+                 Tim R and Neph, Shane J and Onuchic, Vitor and Polak, Paz and
+                 Rajagopal, Nisha and Ray, Pradipta and Sallari, Richard C and
+                 Siebenthall, Kyle T and Sinnott-Armstrong, Nicholas A and
+                 Stevens, Michael and Thurman, Robert E and Wu, Jie and Zhang,
+                 Bo and Zhou, Xin and Beaudet, Arthur E and Boyer, Laurie A and
+                 De Jager, Philip L and Farnham, Peggy J and Fisher, Susan J
+                 and Haussler, David and Jones, Steven J M and Li, Wei and
+                 Marra, Marco A and McManus, Michael T and Sunyaev, Shamil and
+                 Thomson, James A and Tlsty, Thea D and Tsai, Li-Huei and Wang,
+                 Wei and Waterland, Robert A and Zhang, Michael Q and Chadwick,
+                 Lisa H and Bernstein, Bradley E and Costello, Joseph F and
+                 Ecker, Joseph R and Hirst, Martin and Meissner, Alexander and
+                 Milosavljevic, Aleksandar and Ren, Bing and
+                 Stamatoyannopoulos, John A and Wang, Ting and Kellis, Manolis",
+  affiliation = "1] Computer Science and Artificial Intelligence Lab,
+                 Massachusetts Institute of Technology, 32 Vassar St,
+                 Cambridge, Massachusetts 02139, USA. [2] The Broad Institute
+                 of Harvard and MIT, 415 Main Street, Cambridge, Massachusetts
+                 02142, USA. [3] Department of Genetics, Department of Computer
+                 Science, 300 Pasteur Dr., Lane Building, L301, Stanford,
+                 California 94305-5120, USA. 1] Computer Science and Artificial
+                 Intelligence Lab, Massachusetts Institute of Technology, 32
+                 Vassar St, Cambridge, Massachusetts 02139, USA. [2] The Broad
+                 Institute of Harvard and MIT, 415 Main Street, Cambridge,
+                 Massachusetts 02142, USA. 1] Computer Science and Artificial
+                 Intelligence Lab, Massachusetts Institute of Technology, 32
+                 Vassar St, Cambridge, Massachusetts 02139, USA. [2] The Broad
+                 Institute of Harvard and MIT, 415 Main Street, Cambridge,
+                 Massachusetts 02142, USA. [3] Department of Biological
+                 Chemistry, University of California, Los Angeles, 615 Charles
+                 E Young Dr South, Los Angeles, California 90095, USA. Canada's
+                 Michael Smith Genome Sciences Centre, BC Cancer Agency, 675
+                 West 10th Avenue, Vancouver, British Columbia V5Z 1L3, Canada.
+                 1] The Broad Institute of Harvard and MIT, 415 Main Street,
+                 Cambridge, Massachusetts 02142, USA. [2] Department of Stem
+                 Cell and Regenerative Biology, 7 Divinity Ave, Cambridge,
+                 Massachusetts 02138, USA. Epigenome Center, Baylor College of
+                 Medicine, One Baylor Plaza, Houston, Texas 77030, USA.
+                 Department of Cellular and Molecular Medicine, Institute of
+                 Genomic Medicine, Moores Cancer Center, Department of
+                 Chemistry and Biochemistry, University of California San
+                 Diego, 9500 Gilman Drive, La Jolla, California 92093, USA.
+                 Genomic Analysis Laboratory, Howard Hughes Medical Institute
+                 \&The Salk Institute for Biological Studies, 10010 N. Torrey
+                 Pines Road, La Jolla, California 92037, USA. Department of
+                 Genome Sciences, University of Washington, 3720 15th Ave. NE,
+                 Seattle, Washington 98195, USA. 1] Computer Science and
+                 Artificial Intelligence Lab, Massachusetts Institute of
+                 Technology, 32 Vassar St, Cambridge, Massachusetts 02139, USA.
+                 [2] The Broad Institute of Harvard and MIT, 415 Main Street,
+                 Cambridge, Massachusetts 02142, USA. [3] Biology Department,
+                 Massachusetts Institute of Technology, 31 Ames St, Cambridge,
+                 Massachusetts 02142, USA. The Broad Institute of Harvard and
+                 MIT, 415 Main Street, Cambridge, Massachusetts 02142, USA. 1]
+                 The Broad Institute of Harvard and MIT, 415 Main Street,
+                 Cambridge, Massachusetts 02142, USA. [2] The Picower Institute
+                 for Learning and Memory, Department of Brain and Cognitive
+                 Sciences, Massachusetts Institute of Technology, 43 Vassar St,
+                 Cambridge, Massachusetts 02139, USA. 1] Department of Cellular
+                 and Molecular Medicine, Institute of Genomic Medicine, Moores
+                 Cancer Center, Department of Chemistry and Biochemistry,
+                 University of California San Diego, 9500 Gilman Drive, La
+                 Jolla, California 92093, USA. [2] Ludwig Institute for Cancer
+                 Research, 9500 Gilman Drive, La Jolla, California 92093, USA.
+                 Department of Neurosurgery, Helen Diller Family Comprehensive
+                 Cancer Center, University of California San Francisco, 1450
+                 3rd Street, San Francisco, California 94158, USA. Department
+                 of Pathology, University of California San Francisco, 513
+                 Parnassus Avenue, San Francisco, California 94143-0511, USA.
+                 Department of Medicine, Division of Medical Genetics,
+                 University of Washington, 2211 Elliot Avenue, Seattle,
+                 Washington 98121, USA. 1] Computer Science and Artificial
+                 Intelligence Lab, Massachusetts Institute of Technology, 32
+                 Vassar St, Cambridge, Massachusetts 02139, USA. [2] The Broad
+                 Institute of Harvard and MIT, 415 Main Street, Cambridge,
+                 Massachusetts 02142, USA. [3] Department of Computer Science
+                 \&Engineering, University of Connecticut, 371 Fairfield Way,
+                 Storrs, Connecticut 06269, USA. Department of Microbiology and
+                 Immunology and Centre for High-Throughput Biology, University
+                 of British Columbia, 2125 East Mall, Vancouver, British
+                 Columbia V6T 1Z4, Canada. Bioinformatics Group, Department of
+                 Molecular Biology, Division of Biology, Faculty of Science,
+                 University of Zagreb, Horvatovac 102a, 10000 Zagreb, Croatia.
+                 Department of Molecular and Cell Biology, Center for Systems
+                 Biology, The University of Texas, Dallas, NSERL, RL10, 800 W
+                 Campbell Road, Richardson, Texas 75080, USA. Department of
+                 Genetics, Center for Genome Sciences and Systems Biology,
+                 Washington University in St Louis, 4444 Forest Park Ave, St
+                 Louis, Missouri 63108, USA. Institute for Molecular
+                 Bioscience, University of Queensland, St Lucia, Queensland
+                 4072, Australia. 1] The Broad Institute of Harvard and MIT,
+                 415 Main Street, Cambridge, Massachusetts 02142, USA. [2]
+                 Brigham \&Women's Hospital, 75 Francis Street, Boston,
+                 Massachusetts 02115, USA. 1] Department of Genetics, Center
+                 for Genome Sciences and Systems Biology, Washington University
+                 in St Louis, 4444 Forest Park Ave, St Louis, Missouri 63108,
+                 USA. [2] Department of Computer Science and Engineeering,
+                 Washington University in St. Louis, St. Louis, Missouri 63130,
+                 USA. 1] Department of Applied Mathematics and Statistics,
+                 Stony Brook University, Stony Brook, New York 11794-3600, USA.
+                 [2] Cold Spring Harbor Laboratory, Cold Spring Harbor, New
+                 York 11724, USA. Molecular and Human Genetics Department,
+                 Baylor College of Medicine, One Baylor Plaza, Houston, Texas
+                 77030, USA. Biology Department, Massachusetts Institute of
+                 Technology, 31 Ames St, Cambridge, Massachusetts 02142, USA.
+                 1] The Broad Institute of Harvard and MIT, 415 Main Street,
+                 Cambridge, Massachusetts 02142, USA. [2] Brigham \&Women's
+                 Hospital, 75 Francis Street, Boston, Massachusetts 02115, USA.
+                 [3] Harvard Medical School, 25 Shattuck St, Boston,
+                 Massachusetts 02115, USA. Department of Biochemistry, Keck
+                 School of Medicine, University of Southern California, 1450
+                 Biggy Street, Los Angeles, California 90089-9601, USA. ObGyn,
+                 Reproductive Sciences, University of California San Francisco,
+                 35 Medical Center Way, San Francisco, California 94143, USA.
+                 Center for Biomolecular Sciences and Engineering, University
+                 of Santa Cruz, 1156 High Street, Santa Cruz, California 95064,
+                 USA. 1] Canada's Michael Smith Genome Sciences Centre, BC
+                 Cancer Agency, 675 West 10th Avenue, Vancouver, British
+                 Columbia V5Z 1L3, Canada. [2] Department of Molecular Biology
+                 and Biochemistry, Simon Fraser University, 8888 University
+                 Drive, Burnaby, British Columbia V5A 1S6, Canada. [3]
+                 Department of Medical Genetics, University of British
+                 Columbia, 2329 West Mall, Vancouver, BC, Canada, V6T 1Z4. Dan
+                 L. Duncan Cancer Center, Baylor College of Medicine, One
+                 Baylor Plaza, Houston, Texas 77030, USA. 1] Canada's Michael
+                 Smith Genome Sciences Centre, BC Cancer Agency, 675 West 10th
+                 Avenue, Vancouver, British Columbia V5Z 1L3, Canada. [2]
+                 Department of Medical Genetics, University of British
+                 Columbia, 2329 West Mall, Vancouver, BC, Canada, V6T 1Z4.
+                 Department of Microbiology and Immunology, Diabetes Center,
+                 University of California, San Francisco, 513 Parnassus Ave,
+                 San Francisco, California 94143-0534, USA. 1] University of
+                 Wisconsin, Madison, Wisconsin 53715, USA. [2] Morgridge
+                 Institute for Research, 330 N. Orchard Street, Madison,
+                 Wisconsin 53707, USA. USDA/ARS Children's Nutrition Research
+                 Center, Baylor College of Medicine, 1100 Bates Street,
+                 Houston, Texas 77030, USA. 1] Department of Molecular and Cell
+                 Biology, Center for Systems Biology, The University of Texas,
+                 Dallas, NSERL, RL10, 800 W Campbell Road, Richardson, Texas
+                 75080, USA. [2] Bioinformatics Division, Center for Synthetic
+                 and Systems Biology, TNLIST, Tsinghua University, Beijing
+                 100084, China. National Institute of Environmental Health
+                 Sciences, 111 T.W. Alexander Drive, Research Triangle Park,
+                 North Carolina 27709, USA. 1] The Broad Institute of Harvard
+                 and MIT, 415 Main Street, Cambridge, Massachusetts 02142, USA.
+                 [2] Massachusetts General Hospital, 55 Fruit St, Boston,
+                 Massachusetts 02114, USA. [3] Howard Hughes Medical Institute,
+                 4000 Jones Bridge Road, Chevy Chase, Maryland 20815-6789, USA.
+                 1] Canada's Michael Smith Genome Sciences Centre, BC Cancer
+                 Agency, 675 West 10th Avenue, Vancouver, British Columbia V5Z
+                 1L3, Canada. [2] Department of Microbiology and Immunology and
+                 Centre for High-Throughput Biology, University of British
+                 Columbia, 2125 East Mall, Vancouver, British Columbia V6T 1Z4,
+                 Canada.",
+  abstract    = "The reference human genome sequence set the stage for studies
+                 of genetic variation and its association with human disease,
+                 but epigenomic studies lack a similar reference. To address
+                 this need, the NIH Roadmap Epigenomics Consortium generated
+                 the largest collection so far of human epigenomes for primary
+                 cells and tissues. Here we describe the integrative analysis
+                 of 111 reference human epigenomes generated as part of the
+                 programme, profiled for histone modification patterns, DNA
+                 accessibility, DNA methylation and RNA expression. We
+                 establish global maps of regulatory elements, define
+                 regulatory modules of coordinated activity, and their likely
+                 activators and repressors. We show that disease- and
+                 trait-associated genetic variants are enriched in
+                 tissue-specific epigenomic marks, revealing biologically
+                 relevant cell types for diverse human traits, and providing a
+                 resource for interpreting the molecular basis of human
+                 disease. Our results demonstrate the central role of
+                 epigenomic information for understanding gene regulation,
+                 cellular differentiation and human disease.",
+  journal     = "Nature",
+  volume      =  518,
+  number      =  7539,
+  pages       = "317--330",
+  month       =  feb,
+  year        =  2015,
+  url         = "http://dx.doi.org/10.1038/nature14248",
+  language    = "en",
+  issn        = "0028-0836, 1476-4687",
+  pmid        = "25693563",
+  doi         = "10.1038/nature14248",
+  pmc         = "PMC4530010"
 }
 
 
